BPER/DEVF/force-app/main/default/objects/CRM_PropostaAdvisory__c/CRM_PropostaAdvisory__c.object-meta.xml
<CustomObject>
    <label>Proposta Advisory</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Proposta Advisory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposte Advisory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>