BPER/DEVF/force-app/main/default/objects/CRM_PropostaAdvisory__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proposte Advisory</relationshipLabel>
    <relationshipName>CRM_PropostaAdvisory</relationshipName>
    <type>Lookup</type>
</CustomField>