BPER/DEVF/force-app/main/default/objects/CRM_PropostaAdvisory__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>