BPER/DEVF/force-app/main/default/objects/CRM_PropostaAdvisory__c/fields/CRM_Data_Creazione__c.field-meta.xml
<CustomField>
    <fullName>CRM_Data_Creazione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Creazione</label>
    <type>Date</type>
</CustomField>