BPER/DEVF/force-app/main/default/objects/CRM_PropostaAdvisory__c/fields/CRM_Finalita__c.field-meta.xml
<CustomField>
    <fullName>CRM_Finalita__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Finalità</label>
    <length>255</length>
    <type>Text</type>
</CustomField>