BPER/DEVF/force-app/main/default/objects/CRM_PropostaAdvisory__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>